# Random-Helper-functions

./: CMakeLists.txt  README.md  Random-Helper.hpp  build.ps1  run.ps1
include/: Random-Helper.hpp
src/: main.cpp
tests/: main.cpp  test_main.cpp
